openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cydb-submissions
spec:
  selector:
    app: cydb-submissions
  ports:
    - name: http
      port: 80
      targetPort: 3000
