openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cydb-submissions
spec:
  to:
    kind: Service
    name: cydb-submissions
  port:
    targetPort: https
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
